--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,9 @@
 --beliy:#FFFFFF;
 }
 
+ul {
+    list-style: none
+}
 /* Body */
 .body{
     font-family: Roboto, sans-serif;
@@ -203,8 +206,7 @@
     font-size: 14px;
     font-weight: 500;
     line-height: 1.14;
-    color: var(--seriy);
-    font-style: normal;
+    color: rgba(255, 255, 255, 0.6)
 }
 
 .footer .nomer {
@@ -212,8 +214,7 @@
     font-size: 14px;
     font-weight: 500;
     line-height: 1.14;
-    color: var(--seriy);
-    font-style: normal;
+    color: rgba(255, 255, 255, 0.6)
 }
 .gorod {
         font-size: 14px;
