--- a/css/styles.css
+++ b/css/styles.css
@@ -209,16 +209,18 @@ ul {
 .footer .email {
     text-decoration: none;
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 1.14;
+    font-style: normal;
     color: rgba(255, 255, 255, 0.6)
 }
 
 .footer .nomer {
     text-decoration: none;
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 1.14;
+    font-style: normal;
     color: rgba(255, 255, 255, 0.6)
 }
 .gorod {
