--- a/css/styless.css
+++ b/css/styless.css
@@ -59,15 +59,40 @@ ul {
 
 
 /* Shapka */
-.header,
-.nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+.header {
+    margin-bottom: 110px;
+    margin-top: 32px;
 }
 
-.header {
-    width: 1250px;
+.konteiner {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.header .flex {
+    display: flex;
+    align-items: center;
+}
+
+.navigacia .flex {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+}
+
+.ul .flex {
+    display: flex;
+    align-items: center;
+    margin-left: 355px;
+    gap: 35px;
+}
+
+.navigacia .item {
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 .header .web {
@@ -88,10 +113,10 @@ ul {
 }
 
 .header .portfolio {
-    color: var(--siniy);
     font-size: 14px;
     font-weight: 500;
     line-height: 1.14;
+    color: var(--siniy);
     text-decoration: none;
 }
 
@@ -107,9 +132,10 @@ ul {
     font-family: Raleway;
     font-size: 26px;
     line-height: 1.2;
+
     text-decoration: none;
-    width: 700;
     color: var(--cherniy);
+
     margin-right: 93px;
 }
 
@@ -128,28 +154,11 @@ ul {
     color: var(--seriy);
     text-decoration: none;
 }
-
-.header .navigacia {
-    display: flex;
-}
-
-.header .ul {
-    display: flex;
-}
-.navigacia .item {
-    display: block;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    margin-right: 100px;
-}
-
-.ul .item {
-    display: block;
-    margin-right: 40px;
-}
 /* footer */
 .footer {
     background-color: #2F303A;
+    margin-top: 0px;
+    height: 251px;
 }
 
 .footer .web {
@@ -223,13 +232,14 @@ ul {
         line-height: 1.6;
         background-color: #F5F4FA;
         color: var(--slabo-cherniy);
-        margin-right: 30px;
-        margin-bottom: 55px;
-        margin-top: 110px;
+
 }
 .navigasia {
     display: flex;
     justify-content: center;
+    margin-top: 0px;
+    margin-bottom: 50px;
+    gap: 30px;
 }
 
 .navigasia .button:hover,
@@ -254,11 +264,15 @@ ul {
     text-decoration: none;
 }
 .menu {
-    width: 1170px;
+    width: 1200px;
     display: flex;
     flex-wrap: wrap;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 95px;
 }
 .menu .li {
     width: 370px;
-    margin-right: 15px;
+    margin: 15px;
+
 }
