--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,6 @@
 /* Спицефический Цвет #FFFFFF */
 
 
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
 ul
 {
 padding: 0;
@@ -73,23 +67,20 @@ list-style: none
 
 .header .flex {
     display: flex;
-    align-items: center;
 }
- .navigacia .flex {
+ .header .navigacia {
     display: flex;
-    align-items: center;
     gap: 50px;
  }
-  .ul .flex {
+  .header .ul  {
     display: flex;
-    align-items: center;
-    margin-left: 355px;
+    margin-left: auto;
     gap: 35px;
   }
 
 .navigacia .item {
-padding-top: 32px;
-padding-bottom: 32px;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 .header .web {
@@ -155,15 +146,15 @@ padding-bottom: 32px;
     font-weight: 700;
     line-height: 1.8;
     height: 50px;
-    width: 200px;
+    width: 200px;    
 }
 .hero-section {
     background-color: #2F303A;
     text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
-    width: 1200px;
     margin: auto;
+    margin-bottom: 95px;
 }
 .hero-text {
     color: #FFFFFF;
@@ -172,23 +163,28 @@ padding-bottom: 32px;
     line-height: 1.4;
     margin-bottom: 45px;
     margin-top: 0px;
+    margin-left: 280px;
+    margin-right: 280px;
+    width: 600px;
+    height: 115px;
 }
+
 /* Perevagi */
 .perevagi{
     width: 1200px;
     margin: auto;
-    margin-top: 100px;
+    margin-top: 0px;
     margin-bottom: 135px;
 }
 
 .perevagi .ul {
     display: flex;
-    justify-content: space-around;
     gap: 50px;
+    width: 1200px;
 }
 .perevagi .item {
     width: 250px;
-    height: 100px;
+    height: 95px;
 }
 
 .perevagi .zagolovok {
@@ -196,6 +192,8 @@ padding-bottom: 32px;
     font-weight: 700;
     line-height: 1.14;
     color:var(--slabo-cherniy) ;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 .perevagi .text {
@@ -203,6 +201,8 @@ padding-bottom: 32px;
     font-weight: 400;
     line-height: 1.7;
     color: var(--seriy);
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 /* Zanatia */
 .zanatia .zagolovok {
