--- a/css/styles.css
+++ b/css/styles.css
@@ -53,8 +53,7 @@ list-style: none
 /* Shapka */
 
 .header {
-   margin-bottom: 32px;
-   margin-top: 32px;
+   
 }
 
 .konteiner {
@@ -67,6 +66,7 @@ list-style: none
 
 .header .flex {
     display: flex;
+    align-items: center;
 }
  .header .navigacia {
     display: flex;
@@ -81,6 +81,7 @@ list-style: none
 .navigacia .item {
     padding-top: 32px;
     padding-bottom: 32px;
+    display: block;
 }
 
 .header .web {
@@ -153,8 +154,6 @@ list-style: none
     text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
-    margin: auto;
-    margin-bottom: 95px;
 }
 .hero-text {
     color: #FFFFFF;
@@ -163,28 +162,23 @@ list-style: none
     line-height: 1.4;
     margin-bottom: 45px;
     margin-top: 0px;
-    margin-left: 280px;
-    margin-right: 280px;
+    margin-left: auto;
+    margin-right: auto;
     width: 600px;
-    height: 115px;
 }
 
 /* Perevagi */
 .perevagi{
-    width: 1200px;
-    margin: auto;
-    margin-top: 0px;
-    margin-bottom: 135px;
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 .perevagi .ul {
     display: flex;
-    gap: 50px;
-    width: 1200px;
+    gap: 30px;
 }
 .perevagi .item {
-    width: 250px;
-    height: 95px;
+    width: 270px;
 }
 
 .perevagi .zagolovok {
@@ -193,7 +187,7 @@ list-style: none
     line-height: 1.14;
     color:var(--slabo-cherniy) ;
     margin-top: 0px;
-    margin-bottom: 0px;
+    margin-bottom: 23px;
 }
 
 .perevagi .text {
@@ -216,12 +210,16 @@ list-style: none
 }
 .zanatia .ul {
     display: flex;
-    justify-content: space-around;
     gap: 30px;
 }
 .zanatia {
-    margin-bottom: 200px;
+    padding-bottom: 94px;
 }
+
+.zanatia .kartinka {
+    display: block;
+}
+
 /* Komanda */
 .comanda-section {
     background-color: #F5F4FA;
